try to add clean mod

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,6 @@ before_script:
 script:
   - golangci-lint run       # run a bunch of code checkers/linters in parallel
   - go test -v -race ./...  # Run all the tests with the race detector enabled
-  - go get golang.org/x/tools/cmd/cover && go get github.com/mattn/goveralls && go test -v -covermode=count $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
+  - go get golang.org/x/tools/cmd/cover && go get github.com/mattn/goveralls
+  - go clean -modcache
+  - go test -v -covermode=count $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
