add code coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,3 +45,7 @@ script:
   - go get github.com/mattn/goveralls
   - gocoverage
   - goveralls -coverprofile=profile.cov -repotoken=$COVERALLS_TOKEN
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
