--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,32 +2,41 @@ name: Go
 on: [push]
 jobs:
 
-  build:
+  tests:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go 1.12
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.12
+        id: go
 
-    - name: Set up Go 1.12
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.12
-      id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-    
-    - name: Execute tests
-      run: go test ./...
-    - name: Code coverage report
-      run: |
-        GO111MODULE=on
-        curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin
-        go get github.com/philwinder/gocoverage
-        go get github.com/mattn/goveralls
-        gocoverage
-        goveralls -coverprofile=profile.cov -repotoken=$COVERALLS_TOKEN
-        go test -race -coverprofile=coverage.txt -covermode=atomic
+      - name: Execute tests
+        run: go test ./...
+
+  linters:
+    name: Linters
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.12
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.12
+        id: go
+      - name: Code coverage report
+        run: |
+          GO111MODULE=on
+          curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin
+          go get github.com/philwinder/gocoverage
+          go get github.com/mattn/goveralls
+          gocoverage
+          goveralls -coverprofile=profile.cov -repotoken=$COVERALLS_TOKEN
+          go test -race -coverprofile=coverage.txt -covermode=atomic
