--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,10 +33,10 @@ jobs:
         id: go
       - name: Code coverage report
         run: |
-          GO111MODULE=on
+
           curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin
-          go get github.com/philwinder/gocoverage
-          go get github.com/mattn/goveralls
+          GO111MODULE=auto go get github.com/philwinder/gocoverage
+          GO111MODULE=auto go get github.com/mattn/goveralls
           gocoverage
           goveralls -coverprofile=profile.cov -repotoken=$COVERALLS_TOKEN
           go test -race -coverprofile=coverage.txt -covermode=atomic
