update tests command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run tests
-        run: make test
+        run: go test ./...
 
       - name: Upload coverage
         uses: codecov/codecov-action@v1
