add go generate to the CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: go generate
+        run: go generate
+
       - name: Run tests
         run: go test ./...
 
