fix code coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,17 @@ jobs:
       - name: Run tests
         run: go test ./...
 
-      - name: Upload coverage
-        uses: codecov/codecov-action@v1
-        if: always()
+      - name: Calc coverage
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin   
+          go test -v -covermode=count -coverprofile=coverage.out
+      - name: Convert coverage to lcov
+        uses: jandelgado/gcov2lcov-action@v1.0.0
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: build/coverage.txt
+            infile: coverage.out
+            outfile: coverage.lcov
+      - name: Coveralls
+        uses: coverallsapp/github-action@v1.0.1
+        with:
+            github-token: ${{ secrets.github_token }}
+            path-to-lcov: coverage.lcov
