--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -7,5 +7,7 @@ main:
     url: /creating-steps.html
   - title: "testhttp package"
     url: /gobdd/testhttp.html
+  - title: "Suite's options"
+    url: /gobdd/suite-options.html
   - title: "GitHub"
     url: https://github.com/go-bdd/gobdd
