--- a/.github/workflows/cyclop.yml
+++ b/.github/workflows/cyclop.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2
+        with:
+          go-version: '^1.14'
       - name: Download and cyclop
         run: |
           go get github.com/bkielbasa/cyclop
