--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -7,5 +7,7 @@ main:
     url: /creating-steps.html
   - title: "Suite's options"
     url: /suite-options.html
+  - title: "Parameter types"
+    url: /parameter-types.html
   - title: "GitHub"
     url: https://github.com/go-bdd/gobdd
